[gd_scene load_steps=9 format=3 uid="uid://lw3vd2kf4bdo"]

[ext_resource type="Script" uid="uid://deo31ili57o35" path="res://UI/ParryQTE.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://ckr4g86qlivf7" path="res://UI/circle.tres" id="2_da5ao"]
[ext_resource type="FontFile" uid="uid://dxg0puyk07c1q" path="res://Fonts/Avenixel-Regular.ttf" id="2_mnh13"]
[ext_resource type="Texture2D" uid="uid://vitpx06b5gel" path="res://UI/circle riple.tres" id="3_vq4ph"]

[sub_resource type="Gradient" id="Gradient_mnh13"]
offsets = PackedFloat32Array(0.82, 0.85, 0.95, 0.98)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 0.2, 1, 1, 1, 0.2, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_track"]
gradient = SubResource("Gradient_mnh13")
width = 70
height = 70
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.89743596, 0.1794872)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_button"]
font = ExtResource("2_mnh13")
font_size = 14
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="ParryQTE" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="QTEContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="BaseCircle" type="TextureRect" parent="QTEContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_track")

[node name="SuccessZone" type="TextureProgressBar" parent="QTEContainer/BaseCircle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -6.28318
pivot_offset = Vector2(35, 35)
value = 10.0
fill_mode = 4
texture_progress = ExtResource("2_da5ao")

[node name="SpinnerHand" type="ColorRect" parent="QTEContainer/BaseCircle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.5
offset_top = -37.0
offset_right = 1.5
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1.5, 38)
color = Color(1, 0.3, 0.3, 1)

[node name="CenterKeyPrompt" type="Button" parent="QTEContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_normal")
theme_override_styles/focus = SubResource("StyleBoxFlat_normal")

[node name="Label" type="Label" parent="QTEContainer/CenterKeyPrompt"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PARRY"
label_settings = SubResource("LabelSettings_button")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SuccessRipple" type="TextureRect" parent="QTEContainer"]
layout_mode = 0
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
pivot_offset = Vector2(35, 35)
texture = ExtResource("3_vq4ph")
